--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 0;
   background-color: #cfcfcf;
 }
 
